--- a/data/facultyCore.yml
+++ b/data/facultyCore.yml
@@ -59,12 +59,10 @@
   fullname: Jessica Ausborn, PhD
   email: ja696@drexel.edu
   addr: 2900 W. Queen Lane, Rm 252
-  website: <a href="http://biomed.drexel.edu/labs/bhandawat/">Bhandawat Laboratory</a>
+  website: <a href="https://drexel.edu/medicine/faculty/profiles/jessica-ausborn/~/link.aspx?_id=1286E963591946258E54E116FBDE4561&_z=z">The Ausborn Lab</a>
   affil: <a href="https://drexel.edu/medicine/faculty/profiles/jessica-ausborn/">Drexel College of Medicine</a>
   desc: >
-    We study how animal behavior emerges from the complex interaction amongst the animal's nervous systems, their muscle-body dynamics and their environment.
-    We use fruit flies (Drosophila melanogaster) as our model organism because they perform many complex behaviors with a relatively simple brain, and because of the many genetic tools that are available in the flies.
-    We employ a multi-pronged approach which includes in vivo whole-cell patch clamp recordings, imaging, quantitative measurement of behavior, biomechanics, and computation.
+    In the Ausborn Lab, we study the neurophysiological mechanisms of how neural networks process and encode activity to generate appropriate behaviors. To this end we develop detailed, cutting edge models of invertebrate as well as vertebrate neurons and neuronal networks. By integrating a multitude of experimental findings, and often in close interaction with experimental collaborators, our work aims to discover mechanisms involved in sensorimotor integration, neural processing, rhythm generation and the selection and generation of diverse and flexible behaviors.
   areas: 
     - Systems Neuroengineering: research/areas#systems
     - Comparative Neuroengineering: research/areas#comparative
