updated curriculum to courses

--- a/data/pages.yml
+++ b/data/pages.yml
@@ -3,8 +3,8 @@
   sub_pages:
     - title: Faculty Overview
       url: overview
-- title: Curriculum
-  url: curriculum
+- title: Courses
+  url: courses
   sub_pages:
     - title: Course List
       url: list
